Fix css overflow errors temporarily

--- a/src/scenes/Home/components/HomeFoodParty/components/FoodPartyContainer/components/FoodPartyCard/styles.css
+++ b/src/scenes/Home/components/HomeFoodParty/components/FoodPartyContainer/components/FoodPartyCard/styles.css
@@ -96,7 +96,8 @@
   overflow: hidden;
 }
 
-.foodparty-order a, .foodparty-order span {
+.foodparty-order a,
+.foodparty-order span {
   height: 25px !important;
   border-radius: 8px !important;
 }
