--- a/src/scenes/Home/components/HomeRestaurants/components/RestaurantsContainer/components/RestaurantCard/styles.css
+++ b/src/scenes/Home/components/HomeRestaurants/components/RestaurantsContainer/components/RestaurantCard/styles.css
@@ -14,6 +14,11 @@
   overflow: hidden;
 }
 
+.restaurant-card-info p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .restaurant-card-info a {
   width: 55%;
 }
